--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
+    "mmenu-light": "^3.0.3",
     "slick-carousel": "^1.8.1",
     "tablesaw": "^3.1.2"
   }
